Change custom bottom-right sentence

--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -41,7 +41,7 @@ copyright:
     under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
 # meta: Using the :THEME theme for :PLATFORM.
-meta: There's no place like 127.0.0.1.
+meta: Per aspera ad astra.
 
 not_found:
   statement: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
