--- a/_posts/2025-08-20-max-flow.md
+++ b/_posts/2025-08-20-max-flow.md
@@ -12,7 +12,7 @@ description: This post is part of a series of algorithm notes originally intende
 math: true
 date: 2025-08-20 22:44 +0800
 ---
-> This post is part of a series of algorithm notes originally intended only for myself. If you find yourself lacking some background knowledge while reading, that's completely normal --- these notes were never meant to be a comprehensive introduction. I won't go into all the prerequisites here. Nevertheless, I hope these notes can still provide some inspiration, even if the details are sometimes a bit sketchy.
+> This post is part of a series of algorithm notes originally intended only for myself. If you find yourself lacking some background knowledge while reading, that's completely normal --- these notes were never meant to be a comprehensive introduction.
 {: .prompt-warning }
 
 We prove that the time complexity of the Edmonds-Karp algorithm for maximum flow problem is $O(\|V\|\|E\|^2)$, i.e., the number of iterations is $O(\|V\|\|E\|)$.
