Change algorithm posts
Add QED symbol.

--- a/_posts/2025-08-20-max-flow.md
+++ b/_posts/2025-08-20-max-flow.md
@@ -34,4 +34,4 @@ $$
 $$
 
 ### Step 3.
-During each iteration, at least one edge acts as a bottleneck. $\dist$ can increase by no more than $O(\|V\|)$ (from $0$ to $\|V\|-1$). Hence each edge can serve as a bottleneck for at most $O(\|V\|)/2$ times. That leads to the desired upper bound of the number of iterations. Q.E.D.
+During each iteration, at least one edge acts as a bottleneck. $\dist$ can increase by no more than $O(\|V\|)$ (from $0$ to $\|V\|-1$). Hence each edge can serve as a bottleneck for at most $O(\|V\|)/2$ times. That leads to the desired upper bound of the number of iterations. $\square$
