Fix a typo in mira-ex2a-9
Add a period.

--- a/_posts/2026-01-29-mira-ex2a-9.md
+++ b/_posts/2026-01-29-mira-ex2a-9.md
@@ -25,7 +25,7 @@ In this article, we adopt the following notations.
 - $\abs A$ denotes the (Lebesgue) outer measure of $A\subseteq\R$. It is defined as
 
 $$
-\abs A=\inf\cbra{\sum_{k=1}^\infty\ell(I_k):\{I_k\}\text{ is a sequence of open intervals with }A\subseteq\bigcup_{k=1}^\infty I_k}
+\abs A=\inf\cbra{\sum_{k=1}^\infty\ell(I_k):\{I_k\}\text{ is a sequence of open intervals with }A\subseteq\bigcup_{k=1}^\infty I_k}.
 $$
 
 
